# nexusai

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/agents/: call_agent.py
app/constants/: app_constants.py  messages.py  prompts.py
app/models/: __init__.py  call_record.py  campaign.py  conversation.py  customer.py
app/routers/: __init__.py  calls.py  campaigns.py  customers.py  webhooks.py
app/schemas/: __init__.py  call_record.py  campaign.py  customer.py
app/services/: conversation_engine.py  deepgram_service.py  groq_service.py  openai_tts_service.py  twilio_service.py
app/utils/: audio_utils.py
tests/: conftest.py  test_calls.py  test_campaigns.py  test_conversation_engine.py  test_customers.py  test_groq_service.py
