[tool.poetry]
name = "nexusai"
version = "0.1.0"
description = "NexusAI: Intelligent Customer Interaction Platform"
authors = ["Dhara"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
sqlalchemy = "*"
psycopg2-binary = "*"
pydantic-settings = "*"
python-dotenv = "*"
twilio = "*"
deepgram-sdk = "*"
groq = "*"
apscheduler = "*"
websockets = "*"
httpx = "*"
python-multipart = "^0.0.28"
pydub = "^0.25.1"
audioop-lts = "^0.2.2"
openai = "^2.37.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"